set up segue, status bar

--- a/201130_week5_FinalProject/201130_week5_FinalProject/View/Base.lproj/Main.storyboard
+++ b/201130_week5_FinalProject/201130_week5_FinalProject/View/Base.lproj/Main.storyboard
@@ -18,10 +18,13 @@
                         <viewLayoutGuide key="safeArea" id="aPi-ig-C2o"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="onlySegue" modalPresentationStyle="fullScreen" id="ZMe-Oh-dSU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n2e-ay-DA5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-988" y="80"/>
+            <point key="canvasLocation" x="-1049" y="80"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -33,6 +36,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="LdW-Cb-KhI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
