--- a/201130_week5_FinalProject/201130_week5_FinalProject/View/Base.lproj/Main.storyboard
+++ b/201130_week5_FinalProject/201130_week5_FinalProject/View/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="onlySegue" modalPresentationStyle="fullScreen" id="ZMe-Oh-dSU"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="onlySegue" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="ZMe-Oh-dSU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n2e-ay-DA5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
